# 2DGameEngine

./: .luarc.json  CMakeLists.txt  LICENSE  README.md
assets/scripts/: Level-1.lua  test.lua
include/asset_manager/: AssetManager.h
include/audio_manager/: AudioManager.h
include/components/: AnimationComponent.h  BoxColliderComponent.h  CameraFollowComponent.h  DamageComponent.h  DirectionComponent.h  HealthComponent.h  KeyboardControlComponent.h  LabelComponent.h  ProjectileEmitterComponent.h  ScriptComponent.h  SoundSourceComponent.h  SpriteComponent.h  TempEntityComponent.h  TransformComponent.h  VelocityComponent.h
include/core/: Collections.h  Core.h  Game.h  LevelLoader.h  Logger.h  SmartPointers.h
include/data/: CollisionLayer.h  Sprite.h
include/ecs/: ECS.h
include/event_bus/: EventBus.h
include/events/: CollisionEvent.h  KeyPressedEvent.h  SoundEmitterEvent.h
include/systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  ExecuteScriptSystem.h  HealthBarSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmissionSystem.h  RenderColliderSystem.h  RenderLabelSystem.h  RenderSystem.h  SoundPlaySystem.h  TempEntitiesRemovalSystem.h
include/utils/: Math.h
src/: main.cpp
src/asset_manager/: AssetManager.cpp
src/audio_manager/: AudioManager.cpp
src/core/: Game.cpp  LevelLoader.cpp
src/data/: CollisionLayer.cpp
src/ecs/: ECS.cpp
